Added explicit config for cors and changed role assignment on my auth filter to give a user role